[gd_scene load_steps=5 format=3 uid="uid://cd0llb4sievbt"]

[ext_resource type="Texture2D" uid="uid://b04chfbbxl2qe" path="res://sprites/saucer.png" id="1_p0onk"]
[ext_resource type="Script" path="res://scenes/entities/enemy/saucer.gd" id="1_x1lfq"]
[ext_resource type="PackedScene" uid="uid://ceaopw1nwsnl1" path="res://scenes/entities/env/debris_particle.tscn" id="2_vpnhf"]
[ext_resource type="PackedScene" uid="uid://cltcpn726slgt" path="res://scenes/entities/weapons/weapon.tscn" id="3_1jt0g"]

[node name="Saucer" type="CharacterBody2D" node_paths=PackedStringArray("weapon", "weapon_holder", "state_timer", "idle_timer")]
collision_layer = 32
motion_mode = 1
script = ExtResource("1_x1lfq")
weapon = NodePath("WeaponHolder/Weapon")
weapon_holder = NodePath("WeaponHolder")
state_timer = NodePath("StateTimer")
idle_timer = NodePath("IdleTimer")
debris_particle = ExtResource("2_vpnhf")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_p0onk")

[node name="BodyCollision" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -0.0375004)
scale = Vector2(0.925, 0.925)
polygon = PackedVector2Array(0, 12, 20, 12, 32, 0, 6, -13, -6, -13, -32, 0, -20, 12)

[node name="WeaponHolder" type="Node2D" parent="."]
rotation = -1.57079

[node name="Weapon" parent="WeaponHolder" node_paths=PackedStringArray("shooter") instance=ExtResource("3_1jt0g")]
position = Vector2(32, 0)
reload_time = 0.5
shooter = NodePath("../..")

[node name="StateTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="SaucerDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="BodyCollision" type="CollisionPolygon2D" parent="SaucerDetectionArea"]
position = Vector2(0, 0.0375004)
scale = Vector2(1.03516, 1.075)
polygon = PackedVector2Array(0, 12, 20, 12, 32, 0, 6, -13, -6, -13, -32, 0, -20, 12)

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="SaucerDetectionArea" to="." method="_on_saucer_detection_area_body_entered"]
